fix spacing in progress bar

--- a/www/src/css/examples.scss
+++ b/www/src/css/examples.scss
@@ -9,6 +9,10 @@
     margin: 0.25rem 0.25rem;
   }
 
+  .progress{
+    margin: 0.25rem 0.25rem;
+  }
+
   .dropdown {
     display: block;
   }
